[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Veronika <bapplesova@gmail.com>"]
packages = [
   { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.games.brain_even:brain_even"
brain-calc = "brain_games.games.brain_calc:brain_calc"
brain-gcd = "brain_games.games.brain_gcd:brain_gcd"
brain-progression = "brain_games.games.brain_progession:brain_progression"
brain-prime = "brain_games.games.brain_prime:brain_prime"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
